--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-AUTH_SECRET="Pjh7PBnQD3aBxG7DadfEKjjUtaeKLXso"
+AUTH_SECRET="MDhdc7Wfk9Ynurg7pR6R+IcbMs9JnoEJK5G891XY8Ic="
 
-NEXT_PUBLIC_BACKEND_URL=http://localhost:8001
-NEXT_PUBLIC_WAITLIST_BACKEND_URL=http://localhost:8000
+NEXT_PUBLIC_BACKEND_URL=https://backend-newventuress.onrender.com
+NEXT_PUBLIC_WAITLIST_BACKEND_URL=https://backend-newventuress-datacollection.onrender.com
